...
        let action = UIAlertAction(title: result.buttonText, style: .default) { [weak self] _ in
            guard let self = self else { return }
            
            self.presenter.restartGame()
        }
        
        alert.view.accessibilityIdentifier = "Alert"
        
        alert.addAction(action)
        
        self.present(alert, animated: true, completion: nil)
    }
    
...
